--- a/src/v00v.Views/Startup/StartupControl.xaml
+++ b/src/v00v.Views/Startup/StartupControl.xaml
@@ -7,32 +7,104 @@
 
     <Border BorderThickness="1" BorderBrush="#bdacd1">
         <Panel>
-            <Grid ColumnDefinitions="32,auto,auto" RowDefinitions="auto,auto,*,30,30,30,30,30">
-                <Panel Grid.Column="0" Margin="10,10,0,0">
-                    <Ellipse />
-                    <Image Source="resm:v00v.MainApp.Icons.Light.Plus32.png?assembly=v00v.MainApp" />
-                </Panel>
-                <TextBlock Grid.Column="1" Text="Add" Margin="10,10,0,0"/>
-                <Panel Grid.Column="0" Grid.Row ="1" Margin="10,10,0,0">
-                    <Ellipse />
-                    <Image Source="resm:v00v.MainApp.Icons.Light.Settings32.png?assembly=v00v.MainApp" />
-                </Panel>
-                <TextBlock Grid.Column="1" Grid.Row ="1" Text="Synchronize" Margin="10,10,0,0"/>
+            <Grid ColumnDefinitions="32,auto,auto" RowDefinitions="auto,auto,auto,*,25,25,25,25,25,25">
 
-                <TextBlock Grid.Column="1" Grid.Row ="3" Text="* To download video you need to install ffmpeg and youtube-dl. Easy way to do it:" VerticalAlignment="Top"/>
+                <StackPanel Grid.Column="1" Grid.Row ="0" Margin="0,10,0,0" Orientation="Horizontal">
+                    <Panel>
+                        <Ellipse />
+                        <Image Source="resm:v00v.MainApp.Icons.Light.Plus32.png?assembly=v00v.MainApp" />
+                    </Panel>
+                    <TextBlock Text="Add" Margin="10,0,0,0"/>
+                </StackPanel>
 
-                <controls:ExtendedTextBox Grid.Column="1" Grid.Row="4"
-                                          IsReadOnly="True" Text="https://chocolatey.org/docs/installation" />
-                <TextBlock Grid.Column="2" Grid.Row ="4" Text="Install chocolatey" Margin="10,0,0,0"/>
+                <StackPanel Grid.Column="1" Grid.Row ="1" Margin="0,10,0,0" Orientation="Horizontal">
+                    <Panel>
+                        <Ellipse />
+                        <Image Source="resm:v00v.MainApp.Icons.Light.Settings32.png?assembly=v00v.MainApp" />
+                    </Panel>
+                    <TextBlock Text="Synchronize" Margin="10,0,0,0"/>
+                </StackPanel>
 
-                <controls:ExtendedTextBox Grid.Column="1" Grid.Row="5"
-                                          IsReadOnly="True" Text="choco install ffmpeg" />
-                <TextBlock Grid.Column="2" Grid.Row ="5" Text="Install ffmpeg" Margin="10,0,0,0"/>
+                <StackPanel Grid.Column="1" Grid.Row="2" Margin="3,15,0,0" Orientation="Horizontal">
+                    <CheckBox IsChecked="{Binding ShowSettings, Mode=TwoWay}"/>
+                    <TextBlock Text="Show settings" Margin="12,0,0,0"/>
+                </StackPanel>
 
-                <controls:ExtendedTextBox Grid.Column="1" Grid.Row="6"
-                                          IsReadOnly="True" Text="choco install youtube-dl" />
-                <TextBlock Grid.Column="2" Grid.Row ="6" Text="Install youtube-dl" Margin="10,0,0,0"/>
-                
+                <Grid Grid.Column="1" Grid.Row ="3" RowDefinitions="40,25,2,25,20,25,2,25,2,25,40,25,2,25" IsVisible="{Binding ShowSettings, Mode=OneWay}">
+
+                    <StackPanel Orientation="Horizontal" Grid.Row="1">
+                        <TextBlock Text="Directory:"/>
+                        <TextBox Width="346" Margin="16,0,0,0" Watermark="Select..." Text="{Binding BaseDir, Mode=TwoWay}" IsReadOnly="True"/>
+                        <Button Width="30" Content=">>" Margin="2,0,0,0" Name="SelectFolder"/>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" Grid.Row="3">
+                        <TextBlock Text="Player:"/>
+                        <TextBox Width="346" Margin="32,0,0,0" Watermark="Select path to mpc-be..." Text="{Binding WatchApp, Mode=TwoWay}" IsReadOnly="True"/>
+                        <Button Width="30" Content=">>" Margin="2,0,0,0" Name="OpenFile"/>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" Grid.Row="5">
+                        <TextBlock Text="Schedulers:"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Grid.Row="7">
+                        <CheckBox Margin="0,0,4,0" IsChecked="{Binding EnableRepeatSchedule, Mode=TwoWay}"/>
+                        <TextBlock Text="Repeat sync every (min):"/>
+                        <TextBox Width="40" Margin="7,0,0,0" IsEnabled="{Binding EnableRepeatSchedule, Mode=OneWay}"
+                                 Text="{Binding RepeatMin, Mode=TwoWay}"
+                                 />
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" Grid.Row="9">
+                        <CheckBox Margin="0,0,4,0" IsChecked="{Binding EnableDailySchedule, Mode=TwoWay}"/>
+                        <TextBlock Text="Repeat sync at (hh:mm):"/>
+                        <ComboBox Margin="8,0,3,0" Width="40" IsEnabled="{Binding EnableDailySchedule, Mode=OneWay}"
+                                  Items="{Binding Hours, Mode=OneTime}"
+                                  SelectedItem="{Binding SelectedHour, Mode=TwoWay}"
+                                  />
+                        <TextBlock Text=":"/>
+                        <ComboBox Margin="2,0,0,0" Width="40" IsEnabled="{Binding EnableDailySchedule, Mode=OneWay}"
+                                  Items="{Binding Minutes, Mode=OneTime}"
+                                  SelectedItem="{Binding SelectedMinute, Mode=TwoWay}"
+                                  />
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" Grid.Row="11">
+                        <TextBlock Text="Download:"/>
+                        <TextBox Width="346" Margin="10,0,0,0" Watermark="Link..." Text="{Binding DownloadUrl, Mode=TwoWay}"/>
+                        <Button Width="30" Content=">>" Margin="2,0,0,0" Command="{Binding DownloadCommand, Mode=OneTime}"/>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" Grid.Row="13" IsVisible="{Binding IsYoutubeLink, Mode=OneWay}">
+                        <TextBlock Text="Options:"/>
+                        <ComboBox Margin="23,0,0,0" Width="90" Items="{Binding Formats, Mode=OneTime}"
+                                  SelectedItem="{Binding SelectedFormat, Mode=TwoWay}"
+                                  />
+                        <CheckBox Content="With subtitles" IsChecked="{Binding WithSubs, Mode=TwoWay}" Margin="15,0,0,0" 
+                                  IsEnabled="{Binding SubsEnabled, Mode=OneWay}"
+                                  />
+                    </StackPanel>
+
+                </Grid>
+
+                <TextBlock Grid.Column="1" Grid.Row ="4" Text="* To download video you need to install ffmpeg and youtube-dl. Easy way to do it:" VerticalAlignment="Top"/>
+
+                <controls:ExtendedTextBox Grid.Column="1" Grid.Row="5" IsReadOnly="True" Text="https://chocolatey.org/docs/installation"/>
+
+                <TextBlock Grid.Column="2" Grid.Row ="5" Text="Install chocolatey" Margin="10,0,0,0"/>
+
+                <controls:ExtendedTextBox Grid.Column="1" Grid.Row="6" IsReadOnly="True" Text="choco install ffmpeg" />
+
+                <TextBlock Grid.Column="2" Grid.Row ="6" Text="Install ffmpeg" Margin="10,0,0,0"/>
+
+                <controls:ExtendedTextBox Grid.Column="1" Grid.Row="7" IsReadOnly="True" Text="choco install youtube-dl" />
+
+                <TextBlock Grid.Column="2" Grid.Row ="7" Text="Install youtube-dl" Margin="10,0,0,0"/>
+
+                <controls:ExtendedTextBox Grid.Column="1" Grid.Row="8" IsReadOnly="True" Text="https://www.videohelp.com/software/MPC-BE" />
+
+                <TextBlock Grid.Column="2" Grid.Row ="8" Text="Install mpc-be" Margin="10,0,0,0"/>
+
             </Grid>
         </Panel>
     </Border>
