--- a/src/v00v.Views/LogView/LogViewControl.xaml
+++ b/src/v00v.Views/LogView/LogViewControl.xaml
@@ -11,7 +11,22 @@
                   Width="{Binding $parent[Expander].Bounds.Width, Mode=OneWay}"
                   IsEnabled="{Binding EnableLog, Mode=OneWay}"
                   >
-                <TextBox Text="{Binding SearchText, Mode=TwoWay}" HorizontalAlignment="Left"/>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox Text="{Binding SearchText, Mode=TwoWay}" HorizontalAlignment="Left"/>
+                    <ComboBox Width="90" Height="25" Margin="10,0,0,1" BorderThickness="1" 
+                              IsVisible="{Binding EnableTags, Mode=OneWay}"
+                              ToolTip.Tip="Tag"
+                              VirtualizationMode="Simple" 
+                              Items="{Binding Tags, Mode=OneWay}" 
+                              SelectedItem="{Binding SelectedTag, Mode=TwoWay}"
+                              >
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Value}"/>
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                </StackPanel>
                 <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="0,0,10,0">
                     <RadioButton GroupName="ItemSort" ToolTip.Tip="By date" Margin="0,0,3,0"
                                  IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Timestamp}}"
@@ -87,6 +102,16 @@
         </Style>
 
         <Style Selector="TextBox /template/ Border">
+            <Setter Property="CornerRadius" Value="3" />
+        </Style>
+
+        <Style Selector="ComboBox">
+            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="Background" Value="#1b2333" />
+            <Setter Property="BorderBrush" Value="#3a455a" />
+        </Style>
+
+        <Style Selector="ComboBox /template/ Border">
             <Setter Property="CornerRadius" Value="3" />
         </Style>
 
