--- a/src/v00v.Views/Startup/StartupControl.xaml
+++ b/src/v00v.Views/Startup/StartupControl.xaml
@@ -33,7 +33,7 @@
                 <Grid Grid.Column="1" Grid.Row ="3" RowDefinitions="20,25,2,25,10,25,2,25,2,25,2,25,25,25,4,25" IsVisible="{Binding ShowSettings, Mode=OneWay}">
 
                     <StackPanel Orientation="Horizontal" Grid.Row="1">
-                        <TextBlock Text="Directory:"/>
+                        <TextBlock Text="Directory:" ToolTip.Tip="To download"/>
                         <TextBox Width="346" Margin="16,0,0,0" Watermark="Select..." Text="{Binding BaseDir, Mode=TwoWay}" IsReadOnly="True"/>
                         <Button Width="30" Content=">>" Margin="2,0,0,0" Name="SelectFolder"/>
                     </StackPanel>
@@ -45,10 +45,10 @@
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal" Grid.Row="5">
-                        <TextBlock Text="Schedulers:"/>
+                        <TextBlock Text="Schedulers:" ToolTip.Tip="Restart required"/>
                     </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" Grid.Row="7">
+                    <StackPanel Orientation="Horizontal" Grid.Row="7" ToolTip.Tip="Restart required">
                         <CheckBox Margin="0,0,5,0" IsChecked="{Binding EnableRepeatSchedule, Mode=TwoWay}"/>
                         <TextBlock Text="Synchronize every (min):"/>
                         <TextBox Width="40" Margin="7,0,0,0" IsEnabled="{Binding EnableRepeatSchedule, Mode=OneWay}"
@@ -56,7 +56,7 @@
                                  />
                     </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" Grid.Row="9">
+                    <StackPanel Orientation="Horizontal" Grid.Row="9" ToolTip.Tip="Restart required">
                         <CheckBox Margin="0,0,5,0" IsChecked="{Binding EnableDailySchedule, Mode=TwoWay}"/>
                         <TextBlock Text="Synchronize at (hh:mm):"/>
                         <ComboBox Margin="8,0,3,0" Width="40" IsEnabled="{Binding EnableDailySchedule, Mode=OneWay}"
@@ -70,7 +70,7 @@
                                   />
                     </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" Grid.Row="11">
+                    <StackPanel Orientation="Horizontal" Grid.Row="11" ToolTip.Tip="Restart required">
                         <CheckBox Margin="0,0,8,0" IsChecked="{Binding EnableParserUpdateSchedule, Mode=TwoWay}"/>
                         <TextBlock Text="Update parser (hh:mm):"/>
                         <ComboBox Margin="8,0,3,0" Width="40" IsEnabled="{Binding EnableParserUpdateSchedule, Mode=OneWay}"
@@ -85,7 +85,7 @@
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal" Grid.Row="13">
-                        <TextBlock Text="Download:"/>
+                        <TextBlock Text="Download:" ToolTip.Tip="Any link"/>
                         <controls:ExtendedTextBox Width="346" Margin="10,0,0,0" Watermark="Link..." Text="{Binding DownloadUrl, Mode=TwoWay}"/>
                         <Button Width="30" Content=">>" Margin="2,0,0,0" Command="{Binding DownloadCommand, Mode=OneTime}"/>
                     </StackPanel>
